Bug 869337 - Fix missing At comman reply OK after +COPS, r=gyeh, r=echou